syntax = "proto3";
package ipc;

message ValidationError {
    string field = 1;
    string message = 2;
}